Add EF notes samples

--- a/MAUI/MauiApp1/Shared/NavMenu.razor
+++ b/MAUI/MauiApp1/Shared/NavMenu.razor
@@ -15,6 +15,21 @@
 			</NavLink>
 		</div>
 		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="notelist">
+				<span class="oi oi-plus" aria-hidden="true"></span> Note List
+			</NavLink>
+		</div>
+@*		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="noteadd">
+				<span class="oi oi-plus" aria-hidden="true"></span> Note Add
+			</NavLink>
+		</div>*@
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="noteitem">
+				<span class="oi oi-plus" aria-hidden="true"></span> Note Item
+			</NavLink>
+		</div>
+		@*<div class="nav-item px-3">
 			<NavLink class="nav-link" href="counter">
 				<span class="oi oi-plus" aria-hidden="true"></span> Counter
 			</NavLink>
@@ -23,7 +38,7 @@
 			<NavLink class="nav-link" href="fetchdata">
 				<span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
 			</NavLink>
-		</div>
+		</div>*@
 	</nav>
 </div>
 
