--- a/MAUI/MauiApp1/Pages/Index.razor
+++ b/MAUI/MauiApp1/Pages/Index.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h3>Home</h3>
 
+@*
 Welcome to your new app.
-
 <SurveyPrompt Title="How is Blazor working for you?" />
+*@
