--- a/MAUI/MauiApp1/Shared/NavMenu.razor
+++ b/MAUI/MauiApp1/Shared/NavMenu.razor
@@ -19,17 +19,17 @@
 				<span class="oi oi-plus" aria-hidden="true"></span> Note List
 			</NavLink>
 		</div>
-@*		<div class="nav-item px-3">
+		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="noteadd">
 				<span class="oi oi-plus" aria-hidden="true"></span> Note Add
 			</NavLink>
-		</div>*@
-		<div class="nav-item px-3">
+		</div>
+@*		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="noteitem">
 				<span class="oi oi-plus" aria-hidden="true"></span> Note Item
 			</NavLink>
 		</div>
-		@*<div class="nav-item px-3">
+		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="counter">
 				<span class="oi oi-plus" aria-hidden="true"></span> Counter
 			</NavLink>
