--- a/MAUI/MauiApp1/Pages/NoteAdd.razor
+++ b/MAUI/MauiApp1/Pages/NoteAdd.razor
@@ -1,35 +1,70 @@
-﻿@page "/noteadd"
+﻿@page "/note/add"
+@page "/note/edit/{noteId:int}"
 @using MauiApp1.Data
 @inject NavigationManager NavigationManager
 
-<h3>NoteAdd</h3>
+<h1>@Title Note</h1>
+<hr />
 
-<EditForm Model="@note" OnValidSubmit="@AddNote">
+<EditForm Model="@note" OnValidSubmit="SaveNote">
     <DataAnnotationsValidator />
-    <ValidationSummary />
-    <p>
-        <label>Title:
-            <InputText id="title" @bind-Value="note.Title" />
-        </label>
-    </p>
-    <p>
-        <label>
-            Message:
-            <InputText id="Message" @bind-Value="note.Message" />
-        </label>
-    </p>
-    <button type="submit">Submit</button>
+    <div class="mb-3">
+        <label for="Title" class="form-label">Title</label>
+        <div class="col-md-4">
+            <InputText class="form-control" @bind-Value="note.Title" />
+        </div>
+        <ValidationMessage For="@(() => note.Title)" />
+    </div>
+    <div class="mb-3">
+        <label for="Message" class="form-label">Message</label>
+        <div class="col-md-4">
+            <InputText class="form-control" @bind-Value="note.Message" />
+        </div>
+        <ValidationMessage For="@(() => note.Message)" />
+    </div>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Save</button>
+        <button class="btn btn-light" @onclick="Cancel">Cancel</button>
+    </div>
 </EditForm>
 
 @code {
 
-    private Note note = new();
+    [Parameter]
+    public int noteId { get; set; }
 
-    private void AddNote()
+    protected string Title = "Add";
+    protected Note note = new();
+
+    protected override async Task OnParametersSetAsync()
     {
-        using var context = new DemoDBContext();
-        context.Add(note);
-        context.SaveChangesAsync();
+        if (noteId != 0)
+        {
+            Title = "Edit";
+            await using var context = new DemoDBContext();
+            note = context.Notes.Find(noteId);
+        }
+    }
+
+    protected async Task SaveNote()
+    {
+        if (note.NoteId != 0)
+        {
+            await using var context = new DemoDBContext();
+            context.Notes.Update(note);
+            await context.SaveChangesAsync();
+        }
+        else
+        {
+            await using var context = new DemoDBContext();
+            context.Notes.Add(note);
+            await context.SaveChangesAsync();
+        }
+        Cancel();
+    }
+
+    public void Cancel()
+    {
         NavigationManager.NavigateTo("/notelist");
     }
     
