--- a/MAUI/MauiApp1/Pages/NoteList.razor
+++ b/MAUI/MauiApp1/Pages/NoteList.razor
@@ -1,41 +1,106 @@
 ﻿@page "/notelist"
 @using MauiApp1.Data
 
-<h3>Notes</h3>
+<h1>Note Data</h1>
 
-@if (_notes == null)
+<div class="row">
+    <div class="col-md-6">
+        <a href='/note/add' class="btn btn-primary" role="button">
+            <i class="fas fa-user-plus"></i>
+            Add Note
+        </a>
+    </div>
+    <div class="input-group col">
+        <input type="text" class="form-control" placeholder="Search title"
+               @bind="SearchString" @bind:event="oninput" @onkeyup="FilterUser" />
+        @if (SearchString.Length > 0)
+        {
+            <div class="input-group-append">
+                <button class="btn btn-danger" @onclick="ResetSearch">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+        }
+    </div>
+</div>
+<br />
+
+@if (noteList == null)
 {
-	<p><em>Loading...</em></p>
+    <p><em>Loading...</em></p>
 }
 else
 {
-	<table class="table">
-		<thead>
-			<tr>
-				<th>Id</th>
-				<th>Title</th>
-				<th>Message</th>
-			</tr>
-		</thead>
-		<tbody>
-			@foreach (var note in _notes)
-			{
-				<tr>
-					<td>@note.NoteId</td>
-					<td>@note.Title</td>
-					<td>@note.Message</td>
-				</tr>
-			}
-		</tbody>
-	</table>
+    <table class="table table-striped align-middle table-bordered">
+        <thead class="table-success">
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Message</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var note in noteList)
+            {
+                <tr>
+                    <td>@note.NoteId</td>
+                    <td>@note.Title</td>
+                    <td>@note.Message</td>
+                    <td>
+                        <a href='/note/edit/@note.NoteId' class="btn btn-outline-dark" role="button">
+                            Edit
+                        </a>
+                        <a href='/note/delete/@note.NoteId' class="btn btn-outline-danger" role="button">
+                            Delete
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
 
 @code {
-    private List<Note> _notes;
+    protected List<Note> noteList = new();
+    protected List<Note> searchNoteData = new();
+    protected Note note = new();
+    protected string SearchString { get; set; } = string.Empty;
 
     protected override async Task OnInitializedAsync()
     {
+        await GetUser();
+    }
+
+    protected async Task GetUser()
+    {
         await using var context = new DemoDBContext();
-        _notes = context.Notes.ToList();
+        noteList = context.Notes.ToList();
+        searchNoteData = noteList;
+    }
+
+    protected void FilterUser()
+    {
+        if (!string.IsNullOrEmpty(SearchString))
+        {
+            noteList = searchNoteData
+                .Where(x => x.Title.IndexOf(SearchString, StringComparison.OrdinalIgnoreCase) != -1)
+                .ToList();
+        }
+        else
+        {
+            noteList = searchNoteData;
+        }
+    }
+
+    protected void DeleteConfirm(int noteID)
+    {
+        note = noteList.FirstOrDefault(x => x.NoteId == noteID);
+    }
+
+    public void ResetSearch()
+    {
+        SearchString = string.Empty;
+        noteList = searchNoteData;
     }
 }
