--- a/MAUI/MauiApp1/Shared/NavMenu.razor
+++ b/MAUI/MauiApp1/Shared/NavMenu.razor
@@ -21,29 +21,14 @@
 		</div>
 		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="notelist">
-				<span class="oi oi-plus" aria-hidden="true"></span> Note List
+				<span class="oi oi-plus" aria-hidden="true"></span> Notes
 			</NavLink>
 		</div>
 		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="noteadd">
-				<span class="oi oi-plus" aria-hidden="true"></span> Note Add
+			<NavLink class="nav-link" href="bootstrap">
+				<span class="oi oi-plus" aria-hidden="true"></span> Bootstrap
 			</NavLink>
 		</div>
-@*		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="noteitem">
-				<span class="oi oi-plus" aria-hidden="true"></span> Note Item
-			</NavLink>
-		</div>
-		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="counter">
-				<span class="oi oi-plus" aria-hidden="true"></span> Counter
-			</NavLink>
-		</div>
-		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="fetchdata">
-				<span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-			</NavLink>
-		</div>*@
 	</nav>
 </div>
 
